Refactor : 쿼리문이 보이지 않아 로깅레벨 수정

--- a/src/main/java/org/example/expert/application.yml
+++ b/src/main/java/org/example/expert/application.yml
@@ -21,5 +21,6 @@ jwt:
   secret: ${jwt.secret.key}
 
 logging:
-    level:
-      root: info
+  level:
+    org.hibernate.SQL: debug        # 실행되는 SQL 출력
+    org.hibernate.type.descriptor.sql: trace  # 바인딩되는 파라미터까지 출력
